--- a/demorx/app/settings_2.json
+++ b/demorx/app/settings_2.json
@@ -11,5 +11,5 @@
   "statsPwd":"FrHoe+5J9dnqbH+bGikrzw==]OFb/xhJ4S+NYK8/vahSPMA==",
   "isVersionValid":true,
   "aegisUrl":"https://662fee73-375b-46fa-9ffe-e87b7563ebb5.mock.pstmn.io",
-  "isMockLocationAllowed":true
+  "isMockLocationAllowed":false
 }
